--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   android:
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
       - name: 👀 Checkout
         uses: actions/checkout@v2
@@ -50,6 +50,12 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('yarn.lock') }}
       - name: 🧶 Install node modules in root dir
         run: yarn install --frozen-lockfile
+      - uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('android/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
       - name: ⚛️ Display React Native config
         run: yarn react-native config
         working-directory: apps/bare-expo
